versions/1.21/translated/it_it/players/updating-fabric.md
---
title: Aggiornare Fabric
description: Una guida passo per passo su come aggiornare Fabric.
authors:
  - IMB11
  - modmuss50

search: false---

# Aggiornare Fabric {#updating-fabric}

Questa guida ti aiuterà nell'aggiornare Fabric per quanto riguarda il Launcher di Minecraft.

Per launcher di terze parti, dovresti consultare la loro documentazione.

Aggiornare Fabric è un processo molto simile all'installazione di Fabric, per cui alcune parti di questa guida saranno uguali a quelle della guida [Installare Fabric](./installing-fabric).

## Perché Dovrei Aggiornare il Loader di Fabric? {#why-should-i-update-fabric-loader}

Mod più recenti potrebbero richiedere una versione più moderna del Loader di Fabric per funzionare, quindi è importante tenerlo aggiornato per assicurarti di poter usare le mod più recenti.

<!-- Include steps from installing guide, no need to repeat them. -->

<!--@include: ./installing-fabric.md{12,41}-->

Per aggiornare Fabric, assicurati semplicemente che la versione del gioco e quella del Loader siano corrette poi clicca `Installa`.

:::warning IMPORTANTE
**Assicurati di deselezionare 'Crea Profilo' quando esegui l'installer, altrimenti creerà un nuovo profilo, che in questo caso non ci serve.**
:::

## 3. Apri il Profilo nel Launcher di Minecraft {#3-open-the-profile-in-the-minecraft-launcher}

Appena l'installer ha finito, puoi aprire il Launcher di Minecraft e recarti nella scheda `Installazioni`. Dovresti andare al tuo profilo Fabric e aprire la schermata modifica.

Sostituisci la versione con la nuova versione del Loader di Fabric che hai appena installato, e premi `Salva`.

![Aggiornare la versione del Loader di Fabric nel Launcher di Minecraft](/assets/players/updating-fabric.png)

## 4. Hai Finito! {#4-you-re-done}

Appena avrai completato i passaggi potrai tornare alla scheda `Gioca`, selezionare il profilo Fabric dal menu a tendina nell'angolo in basso a sinistra e premere gioca!

Se incontri qualsiasi problema nel seguire questa guida, puoi chiedere aiuto nel [Discord di Fabric](https://discord.gg/v6v4pMv) nel canale `#player-support`.
